fixed leaderboard spacing

--- a/src/application/application.css
+++ b/src/application/application.css
@@ -19,7 +19,7 @@
 	-fx-padding: 20;  
 	-fx-border-style: solid inside; 
 	-fx-border-width: 2;
-	-fx-border-insets: 0 100 80 100; 
+	-fx-border-insets: 0 550 80 550; 
 	-fx-border-radius: 3; 
 	-fx-border-color: black;
 	-fx-spacing: 10;
